# mycelium-network

./: .gitignore  Anchor.toml  Cargo.toml  README.md  agent-card.json  package.json  ucp-manifest.json
app/: .env.local.example  next.config.js  package.json  tailwind.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/asset/[pubkey]/: page.tsx
app/src/app/assets/: page.tsx
app/src/app/register/: page.tsx
app/src/components/: query-provider.tsx
app/src/components/layout/: footer.tsx  header.tsx
app/src/components/wallet/: wallet-provider.tsx
app/src/hooks/: use-my-assets.ts  use-register-ip.ts
app/src/lib/: constants.ts  format.ts  hash.ts  pda.ts  types.ts
docs/: Mycelium_Legal_Integration_Playbook.md
programs/mycelium-hypha/: Cargo.toml
programs/mycelium-hypha/src/: lib.rs
programs/mycelium-meridian/: Cargo.toml
programs/mycelium-meridian/src/: lib.rs
programs/mycelium-rhizome/: Cargo.toml
programs/mycelium-rhizome/src/: lib.rs
programs/mycelium-spore/: Cargo.toml
programs/mycelium-spore/src/: lib.rs
src/: index.ts  solana-adapter.ts  types.ts
tests/: mycelium-hypha.ts  mycelium-meridian.ts  mycelium-spore.ts
