[package]
name = "mycelium-meridian"
version = "0.1.0"
description = "Mycelium Protocol — Meridian: WIPO Evidence Module on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mycelium_meridian"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
