[package]
name = "mycelium-rhizome"
version = "0.1.0"
description = "Mycelium Protocol — Rhizome: Royalty Distribution Engine on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mycelium_rhizome"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
