[package]
name = "mycelium-spore"
version = "0.1.0"
description = "Mycelium Protocol — Spore: IP Registration & Proof of Existence on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mycelium_spore"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
